adding Without Colors producttitle3

--- a/index.html
+++ b/index.html
@@ -89,13 +89,15 @@
     <div class="bottomborder"></div>
     <header id="Top" class="section-2 wf-section"></header>
     <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none;opacity:0"
-        class="producttitle1">product design</div>
+        class="producttitle1">With_out Colors</div>
     <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none;opacity:0"
-        class="producttitle2">IMMERSIVE ART</div>
+        class="producttitle2">With_out Colors</div>
+
     <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none;opacity:0"
-        class="producttitle3">MACHINE LEARNING</div>
+        class="producttitle3">With_out Colors</div>
+
     <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none;opacity:0"
-        class="producttitle4">NEW MEDIA ART</div>
+        class="producttitle4">With_out Colors</div>
     <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="false" data-easing="ease" style="opacity:0;display:none" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500"
         data-infinite="true">
 
@@ -195,6 +197,47 @@
                     <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-SelfAbs.mp4,videos/ParticleScreenLoop2-transcode-SelfAbs.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode-SelfAbs.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode-SelfAbs.webm" data-wf-ignore="true">
+            </video></div>
+                </a>
+            </div>
+
+            <!-- 10- Brain Lick -->
+            <div data-w-id="4eee27ec-226d-6e29-f953-f83afa2b1c86" class="slide3 w-slide">
+                <a class="link-block-2 w-inline-block">
+                    <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
+                    <div class="text-block-5">Short Movie | DaVinci Resolve</div>
+                    <div class="leftsubtitleslide">Brain Lick</div>
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-BrainLick.mp4,videos/ParticleScreenLoop2-transcode-BrainLick.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+              <source src="videos/ParticleScreenLoop2-transcode-BrainLick.mp4" data-wf-ignore="true">
+              <source src="videos/ParticleScreenLoop2-transcode-BrainLick.webm" data-wf-ignore="true">
+            </video></div>
+                </a>
+            </div>
+
+            <!-- 11- Jour et brouillard الصخرة الزرقاء  -->
+            <div data-w-id="4eee27ec-226d-6e29-f953-f83afa2b1c86" class="slide3 w-slide">
+                <a class="link-block-2 w-inline-block">
+                    <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
+                    <div class="text-block-5">Short Movie | DaVinci Resolve</div>
+                    <div class="leftsubtitleslide">Jour et brouillard الصخرة الزرقاء </div>
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-Jour.mp4,videos/ParticleScreenLoop2-transcode-Jour.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+              <source src="videos/ParticleScreenLoop2-transcode-Jour.mp4" data-wf-ignore="true">
+              <source src="videos/ParticleScreenLoop2-transcode-Jour.webm" data-wf-ignore="true">
+            </video></div>
+                </a>
+            </div>
+
+
+            <!-- 12- If anything is الراء و ٧  -->
+            <div data-w-id="4eee27ec-226d-6e29-f953-f83afa2b1c86" class="slide3 w-slide">
+                <a class="link-block-2 w-inline-block">
+                    <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
+                    <div class="text-block-5">Short Movie | DaVinci Resolve</div>
+                    <div class="leftsubtitleslide">If anything is الراء و ٧ </div>
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-IfAnythingIs.mp4,videos/ParticleScreenLoop2-transcode-IfAnythingIs.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true"
+                        class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+              <source src="videos/ParticleScreenLoop2-transcode-IfAnythingIs.mp4" data-wf-ignore="true">
+              <source src="videos/ParticleScreenLoop2-transcode-IfAnythingIs.webm" data-wf-ignore="true">
             </video></div>
                 </a>
             </div>
