--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/webflow.css" rel="stylesheet" type="text/css">
     <link href="css/no-fun.webflow.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script href="js/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">
         WebFont.load({
             google: {
@@ -77,7 +77,7 @@
     <div class="bottombordertext">
         <div class="centernamediv">
             <div class="filldiv"></div>
-            <a href="https://nofun.io/about/index.html" class="infolink w-inline-block">
+            <a href="about/index.html" class="infolink w-inline-block">
                 <div class="titlecenter">INFO</div>
             </a>
             <div class="filldiv"></div>
@@ -109,7 +109,7 @@
                 <a href="http://nofun.io/product/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Advertising | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Bellini Gammarth - The Original Experience</div>
-                    <div data-poster-url="videos/productnoadv-poster-00001.jpg" data-video-urls="videos/productnoadv-transcode.mp4,videos/productnoadv-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/productnoadv-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/productnoadv-poster-00001.jpg" data-video-urls="videos/productnoadv-transcode.mp4,videos/productnoadv-transcode.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/productnoadv-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/productnoadv-transcode.mp4" data-wf-ignore="true">
               <source src="videos/productnoadv-transcode.webm" data-wf-ignore="true">
             </video></div>
@@ -118,10 +118,10 @@
 
             <!-- DELICE -->
             <div data-w-id="ec94ea90-7dc7-de1a-04c9-6f6563bcc44d" class="slide2 w-slide">
-                <a href="https://nofun.io/VR-AR/index.html" class="link-block-2 w-inline-block">
+                <a href="about/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Advertising | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Delice Calcium Bio Disponible</div>
-                    <div data-poster-url="videos/webmagic-poster-00001.jpg" data-video-urls="videos/webmagic-transcode.mp4,videos/webmagic-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/webmagic-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/webmagic-poster-00001.jpg" data-video-urls="videos/webmagic-transcode.mp4,videos/webmagic-transcode.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/webmagic-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/webmagic-transcode.mp4" data-wf-ignore="true">
               <source src="videos/webmagic-transcode.webm" data-wf-ignore="true">
             </video></div>
@@ -133,7 +133,7 @@
                 <a href="http://nofun.io/new-media/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Advertising | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Orange Support</div>
-                    <div data-poster-url="videos/immersiveee-poster-00001.jpg" data-video-urls="videos/immersiveee-transcode.mp4,videos/immersiveee-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/immersiveee-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/immersiveee-poster-00001.jpg" data-video-urls="videos/immersiveee-transcode.mp4,videos/immersiveee-transcode.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/immersiveee-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/immersiveee-transcode.mp4" data-wf-ignore="true">
               <source src="videos/immersiveee-transcode.webm" data-wf-ignore="true">
             </video></div>
@@ -144,8 +144,8 @@
             <div data-w-id="4eee27ec-226d-6e29-f953-f83afa2b1c86" class="slide3 w-slide">
                 <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
-                    <div class="leftsubtitleslide">Lopper - B3id Elchar بعيد الشّر</div>
-                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode.mp4,videos/ParticleScreenLoop2-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div class="leftsubtitleslide">Looper - B3id Elchar بعيد الشّر</div>
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode.mp4,videos/ParticleScreenLoop2-transcode.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode.webm" data-wf-ignore="true">
             </video></div>
@@ -157,7 +157,7 @@
                 <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Empire - Nabra</div>
-                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-Empire.mp4,videos/ParticleScreenLoop2-transcode-Empire.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-Empire.mp4,videos/ParticleScreenLoop2-transcode-Empire.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
             <source src="videos/ParticleScreenLoop2-transcode-Empire.mp4" data-wf-ignore="true">
             <source src="videos/ParticleScreenLoop2-transcode-Empire.webm" data-wf-ignore="true">
           </video></div>
@@ -169,7 +169,8 @@
                 <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">NOBLE MEN - CHAPTER I : Boarding</div>
-                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-NMChapter1.mp4,videos/ParticleScreenLoop2-transcode-NMChapter1.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-NMChapter1.mp4,videos/ParticleScreenLoop2-transcode-NMChapter1.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true"
+                        class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode-NMChapter1.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode-NMChapter1.webm" data-wf-ignore="true">
             </video></div>
@@ -182,7 +183,8 @@
                 <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">NOBLE MEN - CHAPTER II : Cirrus</div>
-                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-NMChapter2.mp4,videos/ParticleScreenLoop2-transcode-NMChapter2.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-NMChapter2.mp4,videos/ParticleScreenLoop2-transcode-NMChapter2.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true"
+                        class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode-NMChapter2.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode-NMChapter2.webm" data-wf-ignore="true">
             </video></div>
@@ -194,7 +196,7 @@
                 <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block">
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Self Absoption</div>
-                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-SelfAbs.mp4,videos/ParticleScreenLoop2-transcode-SelfAbs.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-SelfAbs.mp4,videos/ParticleScreenLoop2-transcode-SelfAbs.webm" data-autoplay="false" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode-SelfAbs.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode-SelfAbs.webm" data-wf-ignore="true">
             </video></div>
