Added the new videos, webfontjs info tel,mail

--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,8 @@
 
 <body class="home-body">
     <div class="div-block-4">
-        <a href="http://nofun.io/" class="link-block w-inline-block"><img src="images/inverted.png" width="45" height="45" alt="" class="image-2"></a>
+        <!-- <a href="http://nofun.io/" class="link-block w-inline-block"><img src="images/inverted.png" width="45" height="45" alt="" class="image-2"></a> -->
+        <!-- <a class="link-block w-inline-block"><img src="images/inverted.png" width="45" height="45" alt="" class="image-2"></a> -->
     </div>
     <div data-ix="header-bg-display" class="global-wrapper">
         <section id="hello" class="content-section hello wf-section">
@@ -117,7 +118,7 @@
             <h2 class="ux"><b>CALIBRATION-COLOR GRADING</b></h2>
             <p class="present-text _2">
 
-                With_out colors works the light and the colors of the film to serve the film, on the best projector.
+                With_out colors works the light and the colors of the film to serve the film, on the best projector.<br>
                 <b>daVinci Resolve</b> is used for color grading in real time and without compression (HD, 2K, 4K), on Supermicro multi-gpu workstations.
             </p>
 
@@ -138,7 +139,7 @@
 
             <br><br><br><br>
 
-            <h2 data-ix="title-behavior" class="heading-2">about me</h2>
+            <!-- <h2 data-ix="title-behavior" class="heading-2">about me</h2>
             <div data-duration-in="300" data-duration-out="100" data-ix="content-display-delay" data-current="Extras" data-easing="ease" class="content-wrapper about w-tabs">
                 <div class="w-tab-content">
                     <div data-w-tab="Extras" class="about-tab-content medium-list w-tab-pane w--tab-active">
@@ -335,7 +336,7 @@
                         <h3>Tools</h3>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </section>
 
 
@@ -344,8 +345,9 @@
                 class="content-wrapper contact">
                 <h2 data-ix="title-behavior" class="heading-5">Get in touch</h2>
                 <a href="../index.html" data-w-id="373d6e66-2b70-fedc-8b41-7ebfaa819896" class="call-to-action hire">Work</a>
-                <a href="mailto:jimmy@nofun.io?subject=Website%20Inquiry" data-w-id="707c061b-76a7-0099-df05-19fb7bde8635" class="call-to-action hire">Say Hello</a>
-                <a href="documents/Jimmy_Simmons_Resume__.pdf" data-w-id="0d06bdc4-6f8e-48b4-b1f5-888df037612a" class="call-to-action hire">Resume</a>
+                <a href="mailto:withoutcolor.contact@gmail.com?subject=Website%20Inquiry" data-w-id="707c061b-76a7-0099-df05-19fb7bde8635" class="call-to-action hire">Say Hello</a>
+                <!-- <a href="documents/Jimmy_Simmons_Resume__.pdf" data-w-id="0d06bdc4-6f8e-48b4-b1f5-888df037612a" class="call-to-action hire">Resume</a> -->
+                <a type="tel" data-w-id="0d06bdc4-6f8e-48b4-b1f5-888df037612a" class="call-to-action hire">+21654422523</a>
             </div>
             <div class="_w-slider-dot _w-active inactive"></div>
         </section>
