--- a/about/index.html
+++ b/about/index.html
@@ -356,8 +356,8 @@
             <div class="header-bg-color"></div>
         </div>
         <div class="metajimbo">
-            <div data-w-id="8e898c0b-5b21-d818-4f47-df526846e318" data-animation-type="lottie" data-src="documents/metaJimbo.json" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1" data-renderer="canvas" data-default-duration="4.333333333333333"
-                data-duration="0" class="jimlottie"></div>
+            <!-- <div data-w-id="8e898c0b-5b21-d818-4f47-df526846e318" data-animation-type="lottie" data-src="documents/metaJimbo.json" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1" data-renderer="canvas" data-default-duration="4.333333333333333"
+                data-duration="0" class="jimlottie"></div> -->
         </div>
     </div>
     <!-- <img src="images/points-2.png" data-ix="light-points" sizes="100vw" srcset="images/points-2-p-500x278.png 500w, images/points-2-p-800x445.png 800w, images/points-2-p-1080x600.png 1080w, images/points-2.png 1440w" alt="" class="points-bg">
