--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
         data-w-id="710f4247-1d0e-364a-cbf2-490e46f944a2" alt="" class="gridimage">
     <div class="whitecenterdiv"><img src="images/Grid_final_light.svg" loading="lazy" style="display:none;width:0%;height:0vw;-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
             alt="" class="whitegrid"></div>
-    <div data-w-id="4d8a497d-b280-9377-d1dd-74caee9b17a4" style="display:flex" class="pre-loader">
+    <!-- <div data-w-id="4d8a497d-b280-9377-d1dd-74caee9b17a4" style="display:flex" class="pre-loader">
         <div class="bodymovin">
             <div data-w-id="e6825335-7175-ebd6-e160-26417ae73404" data-animation-type="lottie" data-src="documents/lf30_editor_azzhx6pk.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1.9333333333333333"
                 data-duration="0" class="lottie-animation"></div>
         </div>
         <div class="text-block-4">THINKING...</div>
-    </div>
+    </div> -->
     <div data-w-id="51bccdab-9de9-f46c-667f-f0337201c2de" style="opacity:0" class="textcenterdiv">
         <div class="textchild">
             <div class="textchilddiv">
