--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <head>
     <meta charset="utf-8">
     <title>Ragheb Ben Salah</title>
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Jimmy Simmons." name="description">
+    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." name="description">
     <meta content="No Fun Studio | Immersive Design" property="og:title">
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Jimmy Simmons." property="og:description">
+    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="og:description">
     <meta content="https://uploads-ssl.webflow.com/5fe9133c01171be2abc717a8/5ff02f259c74e685976938cd_OpenGraphImage.png" property="og:image">
     <meta content="No Fun Studio | Immersive Design" property="twitter:title">
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Jimmy Simmons." property="twitter:description">
+    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="twitter:description">
     <meta content="https://uploads-ssl.webflow.com/5fe9133c01171be2abc717a8/5ff02f259c74e685976938cd_OpenGraphImage.png" property="twitter:image">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
@@ -38,8 +38,8 @@
     </script>
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
     <link href="images/webclip.png" rel="apple-touch-icon">
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-F87KENEQBB"></script>
-    <script type="text/javascript">
+    <!-- <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-F87KENEQBB"></script> -->
+    <!-- <script type="text/javascript">
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -49,7 +49,7 @@
         gtag('config', 'G-F87KENEQBB', {
             'anonymize_ip': false
         });
-    </script>
+    </script> -->
 </head>
 
 <body class="body">
