updated the videos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Mar 16 2022 07:14:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61faa6a22fb8b438194e13a9" data-wf-site="5fe9133c01171be2abc717a8">
 
 <head>
@@ -240,6 +238,20 @@
                         class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode-IfAnythingIs.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode-IfAnythingIs.webm" data-wf-ignore="true">
+              <!-- <source src="videos/ParticleScreenLoop2-transcode-IfAnythingIs.webm" data-wf-ignore="true"> -->
+            </video></div>
+                </a>
+            </div>
+
+            <!-- 13- Straight-->
+            <div data-w-id="4eee27ec-226d-6e29-f953-f83afa2b1c86" class="slide3 w-slide">
+                <a class="link-block-2 w-inline-block">
+                    <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
+                    <div class="text-block-5">Short Movie | DaVinci Resolve</div>
+                    <div class="leftsubtitleslide">If anything is الراء و ٧ </div>
+                    <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-Straight.mp4,videos/ParticleScreenLoop2-transcode-Straight.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+              <source src="videos/ParticleScreenLoop2-transcode-Straight.mp4" data-wf-ignore="true">
+              <source src="videos/ParticleScreenLoop2-transcode-Straight.webm" data-wf-ignore="true">
               <!-- <source src="videos/ParticleScreenLoop2-transcode-IfAnythingIs.webm" data-wf-ignore="true"> -->
             </video></div>
                 </a>
