updated the videos + name

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <a class="link-block-2 w-inline-block">
                     <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
                     <div class="text-block-5">Short Movie | DaVinci Resolve</div>
-                    <div class="leftsubtitleslide">If anything is الراء و ٧ </div>
+                    <div class="leftsubtitleslide">Straight Backward</div>
                     <div data-poster-url="videos/ParticleScreenLoop2-poster-00001.jpg" data-video-urls="videos/ParticleScreenLoop2-transcode-Straight.mp4,videos/ParticleScreenLoop2-transcode-Straight.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="slideimg1 w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(videos/ParticleScreenLoop2-poster-00001.jpg)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
               <source src="videos/ParticleScreenLoop2-transcode-Straight.mp4" data-wf-ignore="true">
               <source src="videos/ParticleScreenLoop2-transcode-Straight.webm" data-wf-ignore="true">
