Deleting bodymovin in JS

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 
     <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(3, 3, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none;opacity:0"
         class="producttitle4">With_out Colors</div>
-    <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="false" data-easing="ease" style="opacity:0;display:none" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500"
-        data-infinite="true">
+    <!-- <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="false" data-easing="ease" style="opacity:0;display:none" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500"
+        data-infinite="true"> -->
+    <div data-animation="slide" class="slider w-slider" data-easing="ease" style="opacity:0;display:none" data-hide-arrows="false" data-disable-swipe="false">
 
 
         <!-- BELLINI -->
