UPDATING THE VIDEOOOOOOOOOOOOS + TITLE

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ragheb Ben Salah</title>
+    <title>RAGHEB BEN SALAH</title>
     <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." name="description">
     <meta content="No Fun Studio | Immersive Design" property="og:title">
     <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="og:description">
