--- a/index.html
+++ b/index.html
@@ -113,9 +113,13 @@
             white-space: normal;
             text-align: center;
         " class="slide w-slide">
-                <a class="link-block-2 w-inline-block">
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
                     <iframe data-object-fit="cover" src="https://www.youtube.com/embed/XYKIe9pkglQ?controls=0" title="Bellini Gammarth - The Original Experience" frameborder="0" allow="accelerometer
-                    ; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    ; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Advertising | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Bellini Gammarth - The Original Experience</div>
                 </a>
@@ -131,10 +135,14 @@
             white-space: normal;
             text-align: center;
         " class="slide2 w-slide">
-                <a class="link-block-2 w-inline-block">
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
                     <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fdelicetunisie%2Fvideos%2F240692304331719%2F&show_text=false&width=560&t=0" data-object-fit="cover" title="Bellini Gammarth - The Original Experience"
                         frameborder="0" allow="accelerometer
-                    ; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    ; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Advertising | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Delice Calcium Bio Disponible</div>
                 </a>
@@ -150,8 +158,12 @@
             white-space: normal;
             text-align: center;
         " class="slide4 w-slide">
-                <a class="link-block-2 w-inline-block">
-                    <iframe src="https://www.youtube.com/embed/yRTr7jWGIvE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
+                    <iframe src="https://www.youtube.com/embed/yRTr7jWGIvE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Advertising | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Orange Support</div>
                 </a>
@@ -167,8 +179,12 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
-                    <iframe src="https://www.youtube.com/embed/CqjfljWQyJA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
+                    <iframe src="https://www.youtube.com/embed/CqjfljWQyJA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Looper - <b>B3id</b> Elchar بعيد الشّر</div>
                 </a>
@@ -184,8 +200,12 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
-                    <iframe src="https://www.youtube.com/embed/l5Z9i_rrcRw?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
+                    <iframe src="https://www.youtube.com/embed/l5Z9i_rrcRw?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Empire - Nabra</div>
                 </a>
@@ -201,8 +221,12 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
-                    <iframe src="https://www.youtube.com/embed/qrInepe5Sq4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
+                    <iframe src="https://www.youtube.com/embed/qrInepe5Sq4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">NOBLE MEN - CHAPTER I : Boarding</div>
                 </a>
@@ -219,8 +243,12 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
-                    <iframe src="https://www.youtube.com/embed/0HOqtmK-2iU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
+                    <iframe src="https://www.youtube.com/embed/0HOqtmK-2iU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">NOBLE MEN - CHAPTER II : Cirrus</div>
                 </a>
@@ -236,8 +264,12 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
-                    <iframe src="https://www.youtube.com/embed/6Fd-AM30rs0?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
+                    <iframe src="https://www.youtube.com/embed/6Fd-AM30rs0?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Music Video | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Self Absoption</div>
                 </a>
@@ -253,9 +285,13 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
                     <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
-                    <iframe src="https://www.youtube.com/embed/wZe7O2cbsPo?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/wZe7O2cbsPo?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Short Movie | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Brain Lick</div>
                 </a>
@@ -271,9 +307,13 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
                     <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
-                    <iframe src="https://www.youtube.com/embed/_WqaoBC7U7k?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/_WqaoBC7U7k?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Short Movie | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Jour et brouillard الصخرة الزرقاء </div>
                 </a>
@@ -290,9 +330,13 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
                     <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
-                    <iframe src="https://www.youtube.com/embed/zqLiP3w200w?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/zqLiP3w200w?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Short Movie | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">If anything is الراء و ٧ </div>
                 </a>
@@ -308,9 +352,13 @@
             white-space: normal;
             text-align: center;
         " class="slide3 w-slide">
-                <a class="link-block-2 w-inline-block">
+                <a class="link-block-2 w-inline-block" style="height: 100%;">
                     <!-- <a href="http://nofun.io/AI-ML/index.html" class="link-block-2 w-inline-block"> -->
-                    <iframe src="https://www.youtube.com/embed/2wJMCFEfwb8?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/2wJMCFEfwb8?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    " allowfullscreen></iframe>
                     <div class="text-block-5">Short Movie | DaVinci Resolve</div>
                     <div class="leftsubtitleslide">Straight Backward</div>
                 </a>
