--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>• RAGHEB BEN SALAH • </title>
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." name="description">
-    <meta content="No Fun Studio | Immersive Design" property="og:title">
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="og:description">
-    <meta content="https://uploads-ssl.webflow.com/5fe9133c01171be2abc717a8/5ff02f259c74e685976938cd_OpenGraphImage.png" property="og:image">
-    <meta content="No Fun Studio | Immersive Design" property="twitter:title">
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="twitter:description">
-    <meta content="https://uploads-ssl.webflow.com/5fe9133c01171be2abc717a8/5ff02f259c74e685976938cd_OpenGraphImage.png" property="twitter:image">
+    <meta content=" Ragheb Ben Salah." name="description">
+    <meta content="- Portfolio" property="og:title">
+    <meta content=" Ragheb Ben Salah." property="og:description">
+    <meta src="images/logowocpng.png" property="og:image">
+    <meta content="- Portfolio" property="twitter:title">
+    <meta content=" Ragheb Ben Salah." property="twitter:description">
+    <meta src="images/logowocpng.png" property="twitter:image">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
