--- a/_downloads.html
+++ b/_downloads.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-        <title> Downloads </title>
-    </head>
-    <body>
-        <h1> Downloads </h1>
-        <ul>
-            <li><a id="https://www.nofun.io/" href="index.html"> NO FUN STUDIO </a></li>
-            <li><a id="https://www.nofun.io/product/index.html" href="product/index.html"> jQuery UI Accordion - Default functionality </a></li>
-        </ul>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title> Downloads </title>
+</head>
+
+<body>
+    <h1> Downloads </h1>
+    <ul>
+        <li><a id="https://www.nofun.io/" href="index.html"> RAGHEB BEN SALAH </a></li>
+        <li><a id="https://www.nofun.io/product/index.html" href="product/index.html"> jQuery UI Accordion - Default functionality </a></li>
+    </ul>
+</body>
+
 </html>
