--- a/about/index.html
+++ b/about/index.html
@@ -6,12 +6,12 @@
 <head>
     <meta charset="utf-8">
     <title>Ragheb Ben Salah</title>
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." name="description">
-    <meta content="No Fun Studio | About Ragheb Ben Salah" property="og:title">
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="og:description">
+    <meta content="Ragheb Ben Salah." name="description">
+    <meta content="Ragheb Ben Salah" property="og:title">
+    <meta content="Ragheb Ben Salah." property="og:description">
     <meta content="https://uploads-ssl.webflow.com/5fe9133c01171be2abc717a8/5ff02f259c74e685976938cd_OpenGraphImage.png" property="og:image">
-    <meta content="No Fun Studio | About Ragheb Ben Salah" property="twitter:title">
-    <meta content="No Fun Studio is an Interaction Design studio focusing in UX | UI | VR | AR | AI | ML. Founded by Ragheb Ben Salah." property="twitter:description">
+    <meta content="Ragheb Ben Salah" property="twitter:title">
+    <meta content="Ragheb Ben Salah." property="twitter:description">
     <meta content="https://uploads-ssl.webflow.com/5fe9133c01171be2abc717a8/5ff02f259c74e685976938cd_OpenGraphImage.png" property="twitter:image">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
