--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
             <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                 <meta http-equiv="Cache-Control" content="no-cache">
-                <title>NO FUN STUDIO</title>
-                <meta name="description" content="NO FUN STUDIO">
+                <title>RAGHEB BEN SALAH</title>
+                <meta name="description" content="RAGHEB BEN SALAH">
                 <style>
                     @font-face {
                         font-family: 'iconfont';
